--- a/api/package.json
+++ b/api/package.json
@@ -1,8 +1,16 @@
 {
   "dependencies": {
     "axios": "^1.3.4",
+    "chai": "^4.3.7",
     "express": "^4.18.2",
     "nodemailer": "^6.9.1",
     "qrcode": "^1.5.1"
+  },
+  "devDependencies": {
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0",
+    "mocha": "^10.2.0",
+    "regenerator-runtime": "^0.13.11",
+    "supertest": "^6.3.3"
   }
 }
