--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,43 +1,53 @@
 pipeline {
     agent any
 
+    environment {
+        PATH = "$PATH:/Users/juba/flutter/bin"
+    }
 
     stages{
-            stage('checkout'){
+        stage('checkout') { 
             steps {
-                    git branch: 'main', url: 'https://github.com/foughali-wejdene/MSPR4.git'
+                git branch:'develop',url:'https://github.com/foughali-wejdene/MSPR4.git'
+                }
+
+
+        }
+
+        stage('clean') {
+                    steps {
+                        sh 'flutter clean'
+                    }
+        }
+
+        stage('dependencies') {
+            steps {
+                sh 'flutter pub get'
             }
         }
 
-            stage('clean') {
+        stage('test') {
             steps {
-                    sh '''chmod u+x ./mvnw'''
-                    sh './mvnw clean'
+                dir('lib/'){
+                        sh 'flutter test'
+                    }
             }
         }
-        stage('compile') {
-            steps {
-                 sh '''chmod u+x ./mvnw'''
-                    sh './mvnw compile'
-            }
+
+        stage('package') {
+                steps {
+                    sh 'flutter build apk --release'
+                }
         }
-                stage('test') {
+
+        stage('archive') {
             steps {
-                 sh '''chmod u+x ./mvnw'''
-                    sh './mvnw test'
+
+                sh 'mv build/app/outputs/flutter-apk/app-release.apk apk-payetonkawa-$BUILD_NUMBER.apk'
+                archiveArtifacts artifacts: 'apk-payetonkawa-*.apk', followSymlinks: false
+
             }
-        }
-                stage('package') {
-            steps {
-                 sh '''chmod u+x ./mvnw'''
-                    sh './mvnw package'
-            }
-        }
-                stage('archive') {
-            steps {
-                  sh 'mv target/erphrense-0.0.1-SNAPSHOT.jar erphrense-${BUILD_NUMBER}.jar'
-                  archiveArtifacts artifacts: 'erphrense-*.jar', followSymlinks: false
-            }
+         }
+
         }
     }
-}
