--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
     stages{
         stage('checkout') { 
             steps {
-                git branch:'develop',url:'https://github.com/foughali-wejdene/MSPR4/mobile.git'
+                git branch:'develop',url:'https://github.com/foughali-wejdene/MSPR4/tree/main/mobile'
                 }
 
 
