--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,13 +2,13 @@ pipeline {
     agent any
 
     environment {
-        PATH = "$PATH:/Users/juba/flutter/bin"
+        PATH="$PATH:/Users/wejdene/Documents/flutter/bin
     }
 
     stages{
         stage('checkout') { 
             steps {
-                git branch:'develop',url:'https://github.com/foughali-wejdene/MSPR4/tree/main/mobile'
+                git branch:'develop',url:'https://github.com/foughali-wejdene/MSPR4.git'
                 }
 
 
